--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
+        with:
+          submodules: recursive
 
       - name: Clean Directory
         run: |
